Demo 2: added show more button for demonstration of list pagination.

--- a/demo2/src/index.css
+++ b/demo2/src/index.css
@@ -29,6 +29,12 @@ html, body {
 	right: 35%;
 }
 
+.demo2-list-show-more {
+	margin-top: 4em;
+	margin-bottom: 500px;
+	text-align: center;
+}
+
 .demo2-select-sort {
 	padding-bottom: 2em;
 }
