Improved formatter demo in supporting formatter settings.

--- a/demo3/src/step2.css
+++ b/demo3/src/step2.css
@@ -20,9 +20,12 @@
 }
 
 .row {
-  border: solid darkorange 5px;
   width: 100%;
   min-height: 120px;
+}
+
+.row .layout {
+  border: solid darkorange 5px;
   text-align: center;
   color: darkorange;
 }
