Reusable components for demo 3 steps.

--- a/demo3/src/index.css
+++ b/demo3/src/index.css
@@ -4,32 +4,9 @@
   box-sizing: border-box;
 }
 
-.modelgroup {
-  border: solid seagreen 5px;
-  width: 100%;
-  height: 120px;
-  text-align: center;
-  padding: 10px;
-  color: seagreen;
-  margin-bottom: 10px;
-}
-
-.area {
-  border: solid darkred 5px;
-  width: 100%;
-  min-height: 120px;
-  margin-bottom: 10px;
-}
-
 .row {
   width: 100%;
   min-height: 120px;
-}
-
-.row .layout {
-  border: solid darkorange 5px;
-  text-align: center;
-  color: darkorange;
 }
 
 .row::after {
@@ -46,13 +23,6 @@
 .col-4 {width: 33.33%;}
 .col-9 {width: 75%;}
 .col-12 {width: 100%;}
-
-.content {
-  color: black;
-  background-color: lightgrey;
-  min-height: 120px;
-  padding: 10px;
-}
 
 img {
   width: 100%;
@@ -103,6 +73,71 @@ img {
 }
 
 /* Step 2 */
+
+.modelgroup {
+  border: solid seagreen 5px;
+  width: 100%;
+  height: 120px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.modelgroup-legend {
+  border: solid seagreen 5px;
+  color: seagreen;
+  padding: 3px;
+  margin-right: 3px;
+}
+
+.layout-area {
+  border: solid darkred 5px;
+  width: 100%;
+  min-height: 120px;
+  margin-bottom: 10px;
+}
+
+.layout-area-legend {
+  border: solid darkred 5px;
+  color: darkred;
+  padding: 3px;
+  margin-right: 3px;
+}
+
+.layout-row {
+  border: solid darkorange 5px;
+  min-height: 120px;
+}
+
+.layout-row-legend {
+  border: solid darkorange 5px;
+  color: darkorange;
+  padding: 3px;
+  margin-right: 3px;
+}
+
+.layout-col {
+  border: solid darkgrey 5px;
+  min-height: 120px;
+}
+
+.layout-column-legend {
+  border: solid darkgrey 5px;
+  color: darkgrey;
+  padding: 3px;
+  margin-right: 3px;
+}
+
+.content {
+  border: solid black 5px;
+  min-height: 120px;
+}
+
+.content-legend {
+  border: solid black 5px;
+  color: black;
+  padding: 3px;
+  margin-right: 3px;
+}
 
 /* Step 3 */
 .formatter {
