--- a/demo3/src/index.css
+++ b/demo3/src/index.css
@@ -74,7 +74,7 @@ img {
 
 /* Step 2 */
 
-.modelgroup {
+.layout-modelgroup {
   border: solid seagreen 5px;
   width: 100%;
   height: 120px;
@@ -82,7 +82,7 @@ img {
   margin-bottom: 10px;
 }
 
-.modelgroup-legend {
+.layout-modelgroup-legend {
   border: solid seagreen 5px;
   color: seagreen;
   padding: 3px;
@@ -127,12 +127,12 @@ img {
   margin-right: 3px;
 }
 
-.content {
+.layout-content {
   border: solid black 5px;
   min-height: 120px;
 }
 
-.content-legend {
+.layout-content-legend {
   border: solid black 5px;
   color: black;
   padding: 3px;
@@ -140,7 +140,34 @@ img {
 }
 
 /* Step 3 */
-.formatter {
+
+.content-item {
+  margin-top: 50px;
+}
+
+.content-item hr {
+  margin-bottom: 50px;
+}
+
+.info-content {
+  border: dotted darkgrey 3px;
+  background-color: light-grey;
+  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.info-content ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.info-content dl {
+  margin: 0;
+  padding: 0;
+}
+
+.info-formatter {
   border: dotted darkseagreen 3px;
   padding: 10px;
 }
