--- a/demo3/src/index.css
+++ b/demo3/src/index.css
@@ -17,6 +17,7 @@
 
 [class*="col-"] {
   float: left;
+  padding: 5px;
 }
 
 .col-3 {width: 25%;}
@@ -175,11 +176,15 @@ img {
 .box-blue {
   background-color: #144382;
   color: #fff;
+  text-align: center;
+  padding: 5px;
 }
 
 .box-red {
   background-color: #b31b34;
   color: #fff;
+  text-align: center;
+  padding: 5px;
 }
 
 .lead {
