--- a/demo3/src/index.css
+++ b/demo3/src/index.css
@@ -22,6 +22,7 @@
 
 .col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
+.col-6 {width: 50%;}
 .col-9 {width: 75%;}
 .col-12 {width: 100%;}
 
@@ -78,8 +79,7 @@ img {
 .layout-modelgroup {
   border: solid seagreen 5px;
   width: 100%;
-  height: 120px;
-  padding: 10px;
+  min-height: 120px;
   margin-bottom: 10px;
 }
 
@@ -102,6 +102,12 @@ img {
   color: darkred;
   padding: 3px;
   margin-right: 3px;
+}
+
+.layout-group {
+  border: solid indigo 5px;
+  width: 100%;
+  min-height: 120px;
 }
 
 .layout-row {
