--- a/demo3/src/index.css
+++ b/demo3/src/index.css
@@ -17,7 +17,6 @@
 
 [class*="col-"] {
   float: left;
-  padding: 5px;
 }
 
 .col-3 {width: 25%;}
@@ -29,6 +28,15 @@
 img {
   width: 100%;
   height: auto;
+}
+
+h1, h2, h3, h4, h5 {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+
+.content {
+  padding: 10px;
 }
 
 /* Step 1 */
@@ -108,6 +116,13 @@ img {
   border: solid indigo 5px;
   width: 100%;
   min-height: 120px;
+}
+
+.layout-group-legend {
+  border: solid indigo 5px;
+  color: indigo;
+  padding: 3px;
+  margin-right: 3px;
 }
 
 .layout-row {
@@ -195,4 +210,16 @@ img {
 
 .lead {
   background-color: #f7f7f7;
+  padding: 10px;
+}
+
+/* Step 6 */
+
+.layout-modelgroup img {
+  width: 300px;
+}
+
+.linksequence-header {
+  position: absolute;
+  right: 30px;
 }
