--- a/demo3/src/index.css
+++ b/demo3/src/index.css
@@ -30,11 +30,6 @@ img {
   height: auto;
 }
 
-h1, h2, h3, h4, h5 {
-  margin-block-start: 0px;
-  margin-block-end: 0px;
-}
-
 .content {
   padding: 10px;
 }
@@ -211,6 +206,13 @@ h1, h2, h3, h4, h5 {
 .lead {
   background-color: #f7f7f7;
   padding: 10px;
+}
+
+.lead h1 {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  padding-top: 0.67em;
+  padding-bottom: 0.67em;
 }
 
 /* Step 6 */
