Align styles of demo 1 and demo 2.

--- a/demo1/src/index.css
+++ b/demo1/src/index.css
@@ -1,14 +1,8 @@
-html, body {
-	width: 90%;
-}
-
-#root {
-	margin-left: 30%;
-	width: 50%;
-}
-
-.demo1-select {
-	margin-bottom: 2em;
+@media only screen and (min-width: 1000px) {
+	#root {
+		margin-left: 30%;
+		margin-right: 30%;
+	}
 }
 
 .demo1-list-item {
@@ -16,13 +10,30 @@ html, body {
 	padding-bottom: 10px;
 	border-bottom: solid grey 1px;
 	cursor: pointer;
+	min-height: 79px;
+}
+
+.demo1-list-item-img-panel {
+	width: 100px;
+	min-height: 75px;
+	float: left;
 }
 
 .demo1-list-item-img {
 	width: 100px;
-	max-height: 100px;
+	max-height: 75px;
+}
+
+.demo1-list-item-label-wrapper {
+	margin-left: 110px;
+	height: 75px;
 }
 
 .demo1-list-item-label {
-	margin-left: 1em;
+	padding-top: 30px;
+	font-size: 1.2em;
+}
+
+.demo1-select {
+	margin-bottom: 2em;
 }
