Added source code documentation for demo 3.

--- a/demo1/src/index.css
+++ b/demo1/src/index.css
@@ -1,7 +1,8 @@
 @media only screen and (min-width: 1000px) {
 	#root {
-		margin-left: 30%;
-		margin-right: 30%;
+		margin-left: 20%;
+		margin-right: 20%;
+		max-width: 800px;
 	}
 }
 
