Improved demo 2 to demonstrate null safe getter functions and contact content with linked poi content.

--- a/demo2/src/index.css
+++ b/demo2/src/index.css
@@ -44,3 +44,9 @@
 .demo2-select-sort {
 	padding-bottom: 2em;
 }
+
+.m-contact img {
+	margin-top: 2em;
+	margin-bottom: 2em;
+	max-width: 300px;
+}
