Improved layout and all demos use the same CSS.

--- a/demo5/components/navbar.module.css
+++ b/demo5/components/navbar.module.css
@@ -44,7 +44,7 @@
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: LightGray;
+  background-color: Gray;
 }
 
 /* Dropdown content (hidden by default) */
