--- a/demo2/src/index.css
+++ b/demo2/src/index.css
@@ -1,52 +1,251 @@
-@media only screen and (min-width: 1000px) {
-	#root {
-		margin-left: 20%;
-		margin-right: 20%;
-		max-width: 800px;
-	}
+
+body {
+	font-family: Montserrat,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
-.demo2-list-item {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border-bottom: solid grey 1px;
-	cursor: pointer;
-	min-height: 79px;
+*, :after, :before {
+    box-sizing: border-box;
+    border: 0 solid #e2e8f0;
 }
 
-.demo2-list-item-img-panel {
-	width: 100px;
-	min-height: 75px;
-	float: left;
+section {
+	margin: 2.25rem 0;
 }
 
-.demo2-list-item-img {
-	width: 100px;
-	max-height: 75px;
+footer {
+	margin: 10rem 0;
 }
 
-.demo2-list-item-label-wrapper {
-	margin-left: 110px;
-	height: 75px;
+h1 {
+	text-align: center;
+	letter-spacing: -.04rem;
+	font-size: 6.25rem;
+	font-weight: 700;
+	margin-bottom: 0;
 }
 
-.demo2-list-item-label {
-	padding-top: 30px;
-	font-size: 1.2em;
+h2 {
+	text-align: center;
+	letter-spacing: -.04rem;
+	font-size: 3.25rem;
+	font-weight: 700;
 }
 
-.demo2-list-show-more {
-	margin-top: 4em;
-	margin-bottom: 500px;
+h3 {
+	text-align: center;
+	letter-spacing: -.04rem;
+	font-size: 2rem;
+	margin-top: .5rem;
+}
+
+h4 {
+  margin-top: 2.25rem;
+	text-align: center;
+	font-size: 1.125rem;
+	font-weight: 500;
+}
+
+a {
+	color: black;
+}
+
+a.doc {
+	background-color: black;
+	color: white;
+	padding: 1rem 3rem;
+	border: solid black 1px;
+	font-weight: bold;
+	text-decoration: inherit;
+	text-align: center;
+	margin-bottom: 1.5rem;
+}
+
+a.doc:hover {
+	background-color: white;
+	color: black;
+}
+
+a.github {
+	font-weight: bold;
+	text-decoration: inherit;
 	text-align: center;
 }
 
-.demo2-select-sort {
-	padding-bottom: 2em;
+label {
+	padding: 5px;
+	padding-left: 20px;
 }
 
-.m-contact img {
-	margin-top: 2em;
-	margin-bottom: 2em;
-	max-width: 300px;
+select, select:active {
+	border: none;
+	background-color: transparent;
+	font-size: 2.75rem;
+	font-weight: bold;
+	margin-right: 1rem;
+}
+
+h3.back:before {
+	content: "←";
+	margin-left: -30px;
+}
+
+button {
+	background-color: #b31b34;
+	color: white;
+	padding: .75rem 2rem;
+	border: solid #b31b34 1px;
+	font-weight: bold;
+	text-decoration: inherit;
+	text-align: center;
+	margin-bottom: 1.5rem;
+	cursor: pointer;
+}
+
+button:hover {
+	background-color: white;
+	color: #b31b34;
+}
+
+button:disabled, button:disabled:hover {
+	background-color: LightGrey;
+	border: solid LightGrey 1px;
+	color: white;
+	cursor: default;
+}
+
+label.radio {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+	margin: 0;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+label.radio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+label.radio .checkmark {
+  position: absolute;
+  top: 3px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+label.radio:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+label.radio input:checked ~ .checkmark {
+  background-color: #b31b34;
+}
+
+label.radio .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+label.radio input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+label.radio .checkmark:after {
+ 	top: 6px;
+	left: 6px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
+.select {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 3rem;
+}
+
+.select h4 {
+	text-align: left;
+}
+
+@media only screen and (max-width: 1000px) {
+
+	.container {
+		padding: 0 1rem;
+		margin: auto;
+	}
+
+	img {
+		width: 100%;
+		box-shadow: 0 10px 20px rgb(0 0 0 / 12%);
+		margin: 10px 0;
+	}
+
+	.list div {
+		text-align: center;
+		margin-bottom: 3.75rem;
+	}
+
+	.flex.column {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+}
+
+@media only screen and (min-width: 1000px) {
+
+	.container {
+		padding: 0 5rem;
+		margin: auto;
+		max-width: 1200px;
+	}
+
+	.flex {
+		display: flex;
+		align-items: baseline;
+		justify-content: space-between;
+	}
+
+	.flex.column {
+		flex-direction: column;
+		align-items: center;
+	}
+
+  .list {
+	  display: flex;
+		align-items: center;
+		justify-content: flex-start;
+    gap: 2rem;
+    margin-bottom: 2rem;
+	}
+
+	.list * {
+		text-align: left;
+	}
+
+	.detail {
+		text-align: center;
+	}
+
+	.content {
+		margin-top: 5rem;
+	}
+
+	img {
+		width: 50%;
+		box-shadow: 0 10px 20px rgb(0 0 0 / 12%);
+		margin: 10px 0;
+	}
 }
